--- a/ui/src/main/res/values-zh-rCN/strings.xml
+++ b/ui/src/main/res/values-zh-rCN/strings.xml
@@ -243,4 +243,5 @@
     <string name="biometric_prompt_private_key_title">查看私钥前需要通过认证</string>
     <string name="biometric_auth_error">认证失败</string>
     <string name="biometric_auth_error_reason">认证失败：%s</string>
+    <string name="search_applications">搜索应用</string>
 </resources>
